# barter-rs

./: .dockerignore  .env.example  .env.testnet  .gitignore  .gitlab-ci.yml  AGENTS.md  Cargo.toml  DOCKER.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  TESTNET.md  VERIFICATION.md  cliff.toml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.testnet.yml  docker-compose.yml  docker-entrypoint.sh  generate-changelogs.sh  release-plz.toml  rust-toolchain.toml  rustfmt.toml  setup_dev_environment.sh  start_testnet.sh
barter/: Cargo.toml  README.md
barter-data/: Cargo.toml  LICENSE  README.md
barter-data/docs/: EXCHANGE_INTEGRATION_GUIDE.md
barter-data/examples/: bybit.rs  dataprovider_streams.rs  dynamic_multi_stream_multi_exchange.rs  ibkr_tests.rs  indexed_market_stream.rs  indexed_order_books_l2_manager.rs  kraken_futures_liquidations.rs  kraken_futures_order_books.rs  kraken_futures_public_trades.rs  kraken_spot_order_books_l2.rs  multi_stream_multi_exchange.rs  order_books_l1_streams.rs  order_books_l1_streams_multi_exchange.rs  order_books_l2_manager.rs  order_books_l2_streams.rs  order_books_l2_streams_bybit.rs  public_trades_streams.rs  public_trades_streams_multi_exchange.rs  public_trades_streams_protobuf.rs  test.rs
barter-data/src/: error.rs  event.rs  instrument.rs  lib.rs
barter-data/src/books/: manager.rs  map.rs  mod.rs
barter-data/src/exchange/: mod.rs  subscription.rs
barter-data/src/provider/: mod.rs
barter-data/src/spike/: mod.rs
barter-data/src/streams/: consumer.rs  manager.rs  mod.rs  reconnect.rs
barter-data/src/subscriber/: mapper.rs  mod.rs  validator.rs
barter-data/src/subscription/: account.rs  book.rs  candle.rs  liquidation.rs  mod.rs  trade.rs
barter-data/src/transformer/: book.rs  mod.rs  sequenced.rs  stateless.rs
barter-data/tests/: market_stream_tests.rs  mexc_l2_integration.rs  onetrading_integration_tests.rs
barter-data/tests/exchange/: binance.rs  mod.rs
barter-engine/: Cargo.toml
barter-engine/src/: lib.rs  replica.rs  run.rs  sequence.rs
barter-execution/: Cargo.toml  LICENSE  README.md
barter-execution/src/: balance.rs  error.rs  indexer.rs  lib.rs  map.rs  mod.rs  order.rs  trade.rs
barter-execution/src/client/: mod.rs
barter-execution/src/exchange/: mod.rs
barter-execution/src/execution/: mod.rs
barter-execution/src/model/: balance.rs  mod.rs  order.rs  trade.rs
barter-execution/src/order/: id.rs  mod.rs  request.rs  state.rs
barter-execution/src/simulated/: mod.rs
barter-execution/tests/: simulated_exchange.rs
barter-execution/tests/util/: mod.rs
barter-instrument/: Cargo.toml  README.md
barter-instrument/examples/: indexed_instrument.rs  volume_collector_with_indexed_instruments.rs
barter-instrument/src/: exchange.rs  lib.rs  market.rs
barter-instrument/src/asset/: mod.rs  name.rs  symbol.rs
barter-instrument/src/index/: builder.rs  error.rs  mod.rs
barter-instrument/src/instrument/: mod.rs  name.rs  quote.rs  spec.rs
barter-integration/: Cargo.toml  LICENSE  README.md
barter-integration/examples/: databento_integration.rs  routing_stream_manager.rs  signed_get_request.rs  simple_websocket_integration.rs  task_manager.rs  websocket_bitmex.rs
barter-integration/src/: channel.rs  component_map_comparison.md  component_map_option2.rs  component_map_option4.rs  de.rs  error.rs  lib.rs  metric.rs  snapshot.rs  subscription.rs  task.rs  task_new.rs
barter-integration/src/collection/: mod.rs  none_one_or_many.rs  one_or_many.rs  snapshot.rs
barter-integration/src/exchange/: mod.rs
barter-integration/src/model/: exchange.rs  mod.rs
barter-integration/src/protocol/: danger.rs  (+2 more)
barter-macro/: Cargo.toml  LICENSE  README.md
barter-macro/src/: lib.rs  stream_registry.rs
barter-macro/tests/: stream_registry.rs
barter-strategy/: Cargo.toml  README.md
barter-strategy/examples/: aster_trading.rs  binance_testnet_trading.rs  verify_connections.rs
barter-strategy/src/: action.rs  backtest.rs  config.rs  error.rs  execution.rs  judgment.rs  lib.rs  model.rs  processor.rs  queue.rs  signal.rs
barter-strategy/tests/: integration_test.rs
barter/examples/: backtests_concurrent.rs  custom_strategy.rs  engine_async_with_historic_market_data_and_mock_execution.rs  engine_sync_with_audit_replica_engine_state.rs  engine_sync_with_live_market_data_and_mock_execution_and_audit.rs  engine_sync_with_multiple_strategies.rs  engine_sync_with_risk_manager_open_order_checks.rs  engine_v2.rs  engine_with_custom_market_data.rs  engine_with_historic_candles.rs  engine_with_historic_market_data.rs  engine_with_historic_market_data_and_mock_execution.rs  engine_with_live_market_data.rs  engine_with_live_market_data_and_mock_execution.rs  engine_with_live_trades.rs  engine_with_replica_engine_state.rs  example_with_state_updates.rs  instrument_map.rs  multiple_strategies.rs  risk_manager_with_open_order_checks.rs  statistical_trading_summary.rs  statistics_v2.rs  system_builder.rs  v2_engine.rs
barter/src/: error.rs  event.rs  lib.rs  logging.rs  shutdown.rs
barter/tests/: integration.rs  test_engine_process_engine_event.rs  test_engine_process_engine_event_with_audit.rs  trading_summary_statistics.rs
jackbot-execution/: Cargo.toml  LICENSE  README.md
jackbot-execution/src/: advanced.rs  balance.rs  error.rs  indexer.rs  lib.rs  map.rs  smart_router.rs  trade.rs  twap.rs  vwap.rs
jackbot-execution/tests/: binance_futures_stub.rs  binance_ws.rs  coinbase_ws.rs  cryptocom_stub.rs  gateio_stub.rs  market_making.rs  mexc_stub.rs  mock_cancel.rs  okx_stub.rs  twap.rs  vwap.rs
jackbot-instrument/: Cargo.toml  README.md
jackbot-instrument/src/: exchange.rs  lib.rs
jackbot-macro/: Cargo.toml  LICENSE
jackbot-macro/src/: lib.rs
jackbot-risk/: Cargo.toml  README.md
jackbot-risk/src/: alert.rs  correlation.rs  drawdown.rs  exposure.rs  lib.rs  position_tracker.rs  volatility.rs
jackbot-risk/tests/: integration.rs
jackbot-ta/: Cargo.toml  README.md
jackbot-ta/src/: indicators.rs  lib.rs  patterns.rs  signals.rs
jackbot-ta/tests/: integration.rs
(+888 files in other folders)
