[workspace]
resolver = "2"
members = [
    "barter",
    "barter-data",
    "barter-integration",
    "barter-execution",
    "barter-macro"
]

[workspace.dependencies]
# Logging
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.16" }

# Async
tokio = { version = "1.38.0" }
tokio-stream = { version = "0.1.15" }
futures = { version = "0.3.30" }
async-trait = { version = "0.1.57" }
pin-project = { version = "1.1.5" }

# Error
thiserror = { version = "1.0.61" }

# SerDe
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.120" }
serde_qs = { version = "0.13.0" }
serde_urlencoded = { version = "0.7.1" }

# Protocol
url = { version = "2.3.1 " }
reqwest = { version = "0.12.4" }
tokio-tungstenite = { version = "0.23.1" }

# Strategy
ta = { version = "0.5.0" }

# Data Structures
vecmap-rs = { version = "0.2.1" }
parking_lot = { version = "0.12.3" }

# Crytographic Signatures
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.6" }
hex = { version = "0.4.3" }
base64 = { version = "0.22.0" }

# Misc
uuid = { version = "1.9.1", features = ["v4", "serde"]}
chrono = { version = "0.4.38", features = ["serde"]}
derive_more = { version = "0.99.17" }
itertools = { version = "0.13.0" }
rust_decimal = { version = "1.29.1" }
rust_decimal_macros = { version = "1.29.1" }
bytes = { version = "1.5.0" }

