[package]
name = "barter-execution"
version = "0.4.0"
edition = "2021"
authors = ["Just A Stream <93921983+just-a-stream@users.noreply.github.com>"]
license = "MIT"
documentation = "https://docs.rs/barter-execution/"
repository = "https://github.com/barter-rs/barter-rs"
readme = "README.md"
description = "High-performance and normalised trading interface capable of executing across many financial venues. Also provides a feature rich simulated exchange."
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]


[dependencies]
# Barter Ecosystem
barter-integration = { path = "../barter-integration", version = "0.8.0" }
barter-instrument = { path = "../barter-instrument", version = "0.2.0" }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
futures = { workspace = true }

# Data Structures
smol_str = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true }
rust_decimal = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Protocol
reqwest = { workspace = true, features = ["rustls-tls", "json"] }

# Misc
uuid = { workspace = true, features = ["v4", "serde"]}
chrono = { workspace = true, features = ["serde"]}
itertools = { workspace = true }
derive_more = { workspace = true, features = ["constructor", "from", "display"]}

