[package]
name = "barter-instrument"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
rust_decimal_macros = { workspace = true }

[dependencies]
# SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Data Structures
smol_str = { workspace = true, features = ["serde"]}
rust_decimal = { workspace = true }

# Misc
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["display"] }
