[package]
name = "barter-instrument"
version = "0.2.0"
edition = "2021"

[dev-dependencies]
rust_decimal_macros = { workspace = true }
serde_json = { workspace = true }

[dependencies]
# SerDe
serde = { workspace = true, features = ["derive"] }

# Data Structures
smol_str = { workspace = true, features = ["serde"]}
rust_decimal = { workspace = true }

# Misc
chrono = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["display"] }
thiserror = { workspace = true }