[package]
name = "barter-strategy"
version = "0.1.0"
edition = "2021"
authors = ["Barter Team"]
description = "Trading strategy implementation for cryptocurrency perpetual contracts"
license = "MIT"

[dependencies]
# Barter dependencies
barter-data = { path = "../barter-data" }
barter-execution = { path = "../barter-execution" }
barter-instrument = { path = "../barter-instrument" }
barter-integration = { path = "../barter-integration" }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Data structures
rust_decimal = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }

# Message queue
fluvio = { version = "0.22", features = ["rustls"] }
fluvio-future = { version = "0.7" }

# AI/ML inference
candle-core = { version = "0.7" }
candle-transformers = { version = "0.7" }
candle-nn = { version = "0.7" }
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = { version = "0.20", features = ["http"] }

# Technical indicators
ta = { version = "0.5" }

# Backtesting
csv = { version = "1.3" }

[dev-dependencies]
tokio-test = { workspace = true }
criterion = { workspace = true }