[package]
name = "barter"
version = "0.8.16"
authors = ["Just A Stream <93921983+just-a-stream@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/barter/"
repository = "https://github.com/barter-rs/barter-rs"
readme = "README.md"
description = "Framework for building event-driven live-trading & backtesting engines"
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
rust_decimal_macros = { workspace = true }
approx = { workspace = true }

[dependencies]
# Barter Ecosystem
barter-integration = { path = "../barter-integration", version = "0.8.0" }
barter-instrument = { path = "../barter-instrument", version = "0.2.0" }
barter-data = { path = "../barter-data", version = "0.9.0" }
barter-execution = { path = "../barter-execution", version = "0.4.0"}

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync"] }
futures = { workspace = true }
pin-project = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }

# Data Structures
smol_str = { workspace = true }
rust_decimal = { workspace = true }
fnv = { workspace = true }
indexmap = { workspace = true, features = ["serde"]}

# Misc
chrono = { workspace = true, features = ["serde"]}
derive_more = { workspace = true, features = ["constructor", "from", "display"]}
prettytable-rs = "0.10.0"
itertools = { workspace = true }
