[package]
name = "barter"
version = "0.8.15"
authors = ["Just A Stream <93921983+just-a-stream@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/barter/"
repository = "https://github.com/barter-rs/barter-rs"
readme = "README.md"
description = "Framework for building event-driven live-trading & backtesting engines"
keywords = ["trading", "backtesting", "crypto", "stocks", "investment"]
categories = ["accessibility", "simulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[dependencies]
# Barter Ecosystem
barter-data = { path = "../barter-data", version = "0.8.1"}
barter-integration = { path = "../barter-integration", version = "0.7.3" }

# Logging
tracing = { workspace = true }

# Async
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Error
thiserror = { workspace = true }

# SerDe
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Data Structures
vecmap-rs = { workspace = true, features = ["serde"] }

# Persistence
redis = "0.25.4"

# Strategy
ta = { workspace = true }

# Misc
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"]}
parking_lot = { workspace = true }
derive_more = { workspace = true}
prettytable-rs = "0.10.0"
itertools = { workspace = true }
